--- a/index.html
+++ b/index.html
@@ -4,4 +4,12 @@
       <meta charset="utf-8">
       <title>Hello World!</title>
     </head>
+    <body>
+        <section>
+            <h1>Hello World!</h1>
+            <p>
+                Realistically, though, we all have days when we do not feel motivated. Does this mean that we cannot work on our goal? No. To illustrate: The wind can be a strong force that pushes a sailboat toward its destination. Yet, the wind varies in strength, and on some days, there may be no wind at all. Does this mean that the sailor cannot keep moving? Not necessarily. For example, some sailboats have a motor; others have oars. The sailor can use these means to keep moving toward his destination. Our motivation can be likened to the wind; how motivated we feel may vary. And on some days, we may feel no motivation to work on our goal. So if we were to work on our goal only when we felt motivated, we might never reach it. But just as the sailor finds other ways to reach his destination, we can still work toward our goal even when we are not motivated. Though this will require self-discipline, the results are worthwhile. Before discussing what we can do, let us address a question that may arise.
+            </p>
+        </section>
+    </body>
 </html>
